--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-High5 Semiconductor (HK) Ltd.
+<style>
+.container {
+  height: 200px;
+  position: relative;
+  <!-- border: 3px solid green; -->
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+</style>
+
+<div class="container">
+  <div class="center">
+		High5 Semiconductor (HK) Ltd.<br>
+		高武半导体 <br>
+		<br>
+		High5 SPLIQ <br>
+		<p style="margin-left: 25px;">
+		* High-Speed     <br>
+		* High-Power     <br>
+		* High-Linearity <br>
+		* High-Integration   <br>  
+		* High-Q-factor  <br>
+		</p>
+  </div>
+</div>
+
+
+<!-- <p style="text-align: center;"> -->
+<!-- </p> -->
