--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <div class="center">
 		High5 Semiconductor (HK) Ltd.<br>
 		高武半导体 <br>
-		<br>
 		High5 SPLIQ <br>
-		<p style="margin-left: 25px;">
-		* High-Speed     <br>
-		* High-Power     <br>
-		* High-Linearity <br>
-		* High-Integration   <br>  
-		* High-Q-factor  <br>
-		</p>
+		<br>
+		<!-- <p style="margin-left: 25px;"> -->
+		High-Speed     <br>
+		High-Power     <br>
+		High-Linearity <br>
+		High-Integration   <br>  
+		High-Q-factor  <br>
+		<!-- </p> -->
   </div>
 </div>
 
