--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <style>
+<!-- <link rel="img" href="styles.css" /> -->
 .container {
   height: 200px;
   position: relative;
-  <!-- border: 3px solid green; -->
 }
 
 .center {
@@ -20,6 +20,9 @@
 		High5 Semiconductor (HK) Ltd.<br>
 		高武半导体 <br>
 		High5 SPLIQ <br>
+		<br>
+		<img src="logo.jpg" alt="high5semi" width="214" height="200">
+		<br>
 		<br>
 		<!-- <p style="margin-left: 25px;"> -->
 		High-Speed     <br>
