--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     .top-right p {
       margin: 5px 0;
       font-size: 12px; /* 字体大小较小 */
-      color: white; /* 文字颜色可以根据背景调整 */
+      color: black; /* 文字颜色可以根据背景调整 */
       font-weight: bold;
     }
   </style>
