--- a/index.html
+++ b/index.html
@@ -1,56 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>High5 Semiconductor</title>
-  <style>
-    /* 设置页面背景为poster.jpg */
-    body {
-      margin: 0;
-      padding: 0;
-      background-image: url('HK6GWS_Poster High5 Semiconductor.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 100vh; /* 视口高度 */
-      font-family: Arial, sans-serif;
-    }
+<style>
+<!-- <link rel="img" href="styles.css" /> -->
+.container {
+  height: 200px;
+  position: relative;
+}
 
-    /* 创建一个用于放置logo和文字的容器 */
-    .top-right {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      text-align: center;
-    }
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+</style>
 
-    /* 设置logo图片的大小 */
-    .top-right img {
-      width: 120px; /* 调整logo大小 */
-      height: auto;
-    }
-
-    /* 设置文字的样式 */
-    .top-right p {
-      margin: 5px 0;
-      font-size: 12px; /* 字体大小较小 */
-      color: black; /* 文字颜色可以根据背景调整 */
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- 右上角的logo和文字内容 -->
-  <div class="top-right">
-    <img src="logo.jpg" alt="high5semi">
-    <p>High-Speed</p>
-    <p>High-Power</p>
-    <p>High-Linearity</p>
-    <p>High-Integration</p>
-    <p>High-Q-factor</p>
+<div class="container">
+  <div class="center">
+		High5 Semiconductor (HK) Ltd.<br>
+		高武半导体 <br>
+		High5 SPLIQ <br>
+		<br>
+		<img src="logo.jpg" alt="high5semi" width="214" height="200">
+		<br>
+		<br>
+		<!-- <p style="margin-left: 25px;"> -->
+		High-Speed     <br>
+		High-Power     <br>
+		High-Linearity <br>
+		High-Integration   <br>  
+		High-Q-factor  <br>
+		<!-- </p> -->
   </div>
+</div>
 
-</body>
-</html>
+
+<!-- <p style="text-align: center;"> -->
+<!-- </p> -->
