--- a/index.html
+++ b/index.html
@@ -3,54 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>High5 Semiconductor</title>
+  <title>Full Screen Image</title>
   <style>
-    /* 设置页面背景为poster.jpg */
-    body {
+    * {
       margin: 0;
       padding: 0;
-      background-image: url('HK6GWS_Poster High5 Semiconductor.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 100vh; /* 视口高度 */
-      font-family: Arial, sans-serif;
+      overflow: hidden;
     }
-
-    /* 创建一个用于放置logo和文字的容器 */
-    .top-right {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      text-align: center;
+    html, body {
+      height: 100%;
     }
-
-    /* 设置logo图片的大小 */
-    .top-right img {
-      width: 120px; /* 调整logo大小 */
-      height: auto;
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-
-    /* 设置文字的样式 */
-    .top-right p {
-      margin: 5px 0;
-      font-size: 12px; /* 字体大小较小 */
-      color: black; /* 文字颜色可以根据背景调整 */
-      font-weight: bold;
+    img {
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
     }
   </style>
 </head>
 <body>
-
-  <!-- 右上角的logo和文字内容 -->
-  <div class="top-right">
-    <img src="logo.jpg" alt="high5semi">
-    <p>High-Speed</p>
-    <p>High-Power</p>
-    <p>High-Linearity</p>
-    <p>High-Integration</p>
-    <p>High-Q-factor</p>
-  </div>
-
+  <img src="Poster.jpg" alt="Full Screen Image">
 </body>
 </html>
