--- a/index.html
+++ b/index.html
@@ -3,74 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>High5 Semiconductor</title>
+  <title>Full Screen Image</title>
   <style>
-    /* 页面设置：移除默认边距 */
-    body {
+    * {
       margin: 0;
       padding: 0;
+      overflow: hidden;
+    }
+    html, body {
+      height: 10%;
+    }
+    body {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh; /* 页面高度 */
-      background-color: #f0f0f0; /* 背景颜色 */
     }
-
-    /* 海报图片容器 */
-    .poster-container {
-      position: relative;
-      width: 50%; /* 设置图片的宽度为页面宽度的50% */
-      max-width: 800px; /* 最大宽度为800px，避免图片过大 */
-    }
-
-    /* 让海报图片自适应容器大小 */
-    .poster-container img {
-      width: 100%;
-      height: auto; /* 保持图片比例 */
-    }
-
-    /* 右上角的logo和文字 */
-    .top-right {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      text-align: center;
-      background-color: rgba(0, 0, 0, 0.5); /* 半透明背景，确保文字清晰可见 */
-      padding: 5px;
-      border-radius: 8px;
-    }
-
-    /* 设置logo图片的大小 */
-    .top-right img {
-      width: 50px; /* 调整logo大小 */
-      height: auto;
-    }
-
-    /* 设置文字的样式 */
-    .top-right p {
-      margin: 5px 0;
-      font-size: 10px; /* 字体大小较小 */
-      color: white; /* 文字颜色 */
-      font-weight: bold;
+    img {
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
     }
   </style>
 </head>
 <body>
-
-  <!-- 海报图片容器 -->
-  <div class="poster-container">
-    <img src="Poster.jpg" alt="Poster Image">
-
-    <!-- 右上角的logo和文字内容 -->
-    <div class="top-right">
-      <img src="logo.jpg" alt="high5semi">
-      <p>High-Speed</p>
-      <p>High-Power Efficiency</p>
-      <p>High-Linearity</p>
-      <p>High-Integration</p>
-      <p>High-Q-factor</p>
-    </div>
-  </div>
-
+  < img src="Poster.jpg" alt="Full Screen Image">
 </body>
 </html>
