--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>High5 Semiconductor</title>
   <style>
-    /* 页面设置：移除默认边距 */
+    /* 页面基础设置，移除默认边距和填充 */
     body {
       margin: 0;
       padding: 0;
@@ -14,19 +14,7 @@
       align-items: center;
       height: 100vh; /* 页面高度 */
       background-color: #f0f0f0; /* 背景颜色 */
-    }
-
-    /* 海报图片容器 */
-    .poster-container {
-      position: relative;
-      width: 50%; /* 设置图片的宽度为页面宽度的50% */
-      max-width: 1000px; /* 最大宽度为800px，避免图片过大 */
-    }
-
-    /* 让海报图片自适应容器大小 */
-    .poster-container img {
-      width: 100%;
-      height: auto; /* 保持图片比例 */
+      font-family: Arial, sans-serif; /* 全局字体 */
     }
 
     /* 右上角的logo和文字 */
@@ -34,42 +22,57 @@
       position: absolute;
       top: 10px;
       right: 10px;
-      text-align: center;
-      background-color: rgba(0, 0, 0, 0.5); /* 半透明背景，确保文字清晰可见 */
-      padding: 5px;
+      text-align: left; /* 左对齐内容 */
+      background-color: rgba(0, 0, 0, 0.5); /* 半透明背景 */
+      padding: 10px;
       border-radius: 8px;
+      color: white; /* 文字颜色 */
     }
 
     /* 设置logo图片的大小 */
     .top-right img {
       width: 50px; /* 调整logo大小 */
       height: auto;
+      display: block;
+      margin-bottom: 10px;
     }
 
     /* 设置文字的样式 */
     .top-right p {
       margin: 5px 0;
-      font-size: 10px; /* 字体大小较小 */
-      color: white; /* 文字颜色 */
+      font-size: 12px; /* 字体大小 */
       font-weight: bold;
+    }
+
+    /* 海报图片容器 */
+    .poster-container {
+      width: 50%; /* 图片宽度为页面宽度的50% */
+      max-width: 900px; /* 最大宽度为800px */
+      text-align: center; /* 图片居中对齐 */
+    }
+
+    /* 让海报图片自适应容器大小 */
+    .poster-container img {
+      width: 100%;
+      height: auto; /* 保持图片比例 */
     }
   </style>
 </head>
 <body>
 
+  <!-- 右上角的logo和文字内容 -->
+  <div class="top-right">
+    <img src="logo.jpg" alt="high5semi">
+    <p>High-Speed</p>
+    <p>High-Power</p>
+    <p>High-Linearity</p>
+    <p>High-Integration</p>
+    <p>High-Q-factor</p>
+  </div>
+
   <!-- 海报图片容器 -->
   <div class="poster-container">
     <img src="Poster.jpg" alt="Poster Image">
-
-    <!-- 右上角的logo和文字内容 -->
-    <div class="top-right">
-      <img src="logo.jpg" alt="high5semi">
-      <p>High-Speed</p>
-      <p>High-Power</p>
-      <p>High-Linearity</p>
-      <p>High-Integration</p>
-      <p>High-Q-factor</p>
-    </div>
   </div>
 
 </body>
