--- a/index.html
+++ b/index.html
@@ -22,16 +22,13 @@
       position: absolute;
       top: 20px;
       right: 20px;
-      background-color: rgba(0, 0, 0, 0.6); /* 半透明的黑色背景 */
-      padding: 10px;
-      border-radius: 8px;
-      color: balck; /* 白色字体 */
+      color: #003366; /* 文字深蓝色 */
       text-align: left; /* 左对齐文字 */
     }
 
-    /* Logo的大小 */
+    /* Logo大小 */
     .top-right img {
-      width: 100px; /* Logo宽度 */
+      width: 50px; /* Logo宽度 */
       height: auto;
       display: block;
       margin-bottom: 10px; /* 在Logo和文字之间留一些间距 */
@@ -40,9 +37,14 @@
     /* 设置文字的样式 */
     .top-right p {
       margin: 5px 0;
-      font-size: 20px; /* 调整字体大小 */
-      font-weight: bold; /* 加粗字体 */
-      text-transform: uppercase; /* 将所有字母大写 */
+      font-size: 20px; /* 字体大小 */
+      font-weight: normal; /* 默认不加粗 */
+      color: #003366; /* 深蓝色 */
+    }
+
+    /* 设置高亮的大写字母加粗 */
+    .top-right span {
+      font-weight: bold; /* 仅加粗大写字母 */
     }
 
     /* 海报图片容器 */
@@ -66,11 +68,11 @@
   <!-- 右上角的Logo和5个High特性 -->
   <div class="top-right">
     <img src="logo.jpg" alt="High5 Semiconductor Logo">
-    <p>High-Speed</p>
-    <p>High-Power</p>
-    <p>High-Linearity</p>
-    <p>High-Integration</p>
-    <p>High-Q-factor</p>
+    <p>High-<span>S</span>peed</p>
+    <p>High-<span>P</span>ower</p>
+    <p>High-<span>L</span>inearity</p>
+    <p>High-<span>I</span>ntegration</p>
+    <p>High-<span>Q</span>-factor</p>
   </div>
 
   <!-- 海报图片容器 -->
