--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     /* Logo大小 */
     .top-right img {
-      width: 200px; /* Logo宽度 */
+      width: 100px; /* Logo宽度 */
       height: auto;
       display: block;
       margin-bottom: 10px; /* 在Logo和文字之间留一些间距 */
@@ -69,7 +69,7 @@
   <div class="top-right">
     <img src="logo.jpg" alt="High5 Semiconductor Logo">
     <p>High-<span>S</span>peed</p>
-    <p>High-<span>P</span>ower</p>
+    <p>High-<span>P</span>ower Efficiency</p>
     <p>High-<span>L</span>inearity</p>
     <p>High-<span>I</span>ntegration</p>
     <p>High-<span>Q</span>-factor</p>
