--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- 海报图片容器 -->
   <div class="poster-container">
-    <img src="Poster.jpg" alt="Poster Image">
+    <img src="Poster_v2.jpg" alt="Poster Image">
   </div>
 
 </body>
