--- a/index.html
+++ b/index.html
@@ -15,44 +15,49 @@
         header {
             background-color: white;
             color: #0F4499;
-            padding: 10px;
-            position: relative;
-            display: flex;
-            align-items: center;
+            padding: 15px;
+            text-align: center;
         }
         header h1 {
             margin: 0;
             padding: 0;
+            font-size: 1.5em;
         }
         header img {
-            position: absolute;
-            right: 20px;
-            top: 10px;
-            height: 80px;
+            height: 60px;
+            margin-top: 10px;
         }
         nav {
+            background-color: white;
+            padding: 10px;
+            overflow-x: auto;
+        }
+        .nav-links {
             display: flex;
             justify-content: center;
-            background-color: white;
-            align-items: center;
+            flex-wrap: wrap;
+            gap: 10px;
         }
         nav a {
             color: #0F4499;
-            padding: 14px 20px;
+            padding: 8px 15px;
             text-decoration: none;
             text-align: center;
             font-weight: bold;
+            white-space: nowrap;
         }
         nav a:hover, nav .active {
             background-color: #ddd;
             color: black;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
         .language-switch {
-            margin-left: 20px;
+            text-align: center;
+            margin-top: 10px;
+            padding: 5px;
         }
         main {
-            padding: 20px;
+            padding: 15px;
             max-width: 800px;
             margin: 0 auto;
         }
@@ -63,20 +68,48 @@
             margin-bottom: 20px;
         }
         footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px;
             background-color: white;
             color: #0F4499;
+            padding: 15px;
             margin-top: 20px;
         }
-        footer img {
-            height: 100px;
+        .footer-content {
+            max-width: 800px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            gap: 15px;
         }
         .footer-text {
             line-height: 1.8;
-            text-align: left;
+        }
+        footer img {
+            height: 60px;
+        }
+
+        /* 移动端适配 */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.2em;
+            }
+            header img {
+                height: 50px;
+            }
+            nav {
+                padding: 5px;
+            }
+            nav a {
+                padding: 6px 12px;
+                font-size: 0.9em;
+            }
+            .footer-content {
+                padding: 10px;
+            }
+            footer img {
+                height: 50px;
+            }
         }
     </style>
 </head>
@@ -86,12 +119,14 @@
         <img src="logo.png" alt="Company Logo">
     </header>
     <nav>
-        <a href="home_en.html" class="active">Home Page</a>
-        <a href="news_en.html">News</a>
-        <a href="products_en.html">Products</a>
-        <a href="design_service_en.html">Design Service</a>
-        <a href="members_en.html">Members</a>
-        <a href="contact_en.html">Contact Us</a>
+        <div class="nav-links">
+            <a href="home_en.html" class="active">Home Page</a>
+            <a href="news_en.html">News</a>
+            <a href="products_en.html">Products</a>
+            <a href="design_service_en.html">Design Service</a>
+            <a href="members_en.html">Members</a>
+            <a href="contact_en.html">Contact Us</a>
+        </div>
         <div class="language-switch">
             <a href="index.html">Eng</a> | 
             <a href="index_cn.html">简体中文</a> | 
@@ -107,13 +142,15 @@
         </section>
     </main>
     <footer>
-        <div class="footer-text">
-            <b>CONTACT US</b><br>
-            Email: high5semi@gmail.com<br>
-            Address: Unit 309B, Floor 5/F, 5W Building, HKSP, Shatin, Hong Kong<br>
-            ©2024 All rights reserved by High5 Semiconductor
+        <div class="footer-content">
+            <div class="footer-text">
+                <b>CONTACT US</b><br>
+                Email: high5semi@gmail.com<br>
+                Address: Unit 309B, Floor 5/F, 5W Building, HKSP, Shatin, Hong Kong<br>
+                ©2024 All rights reserved by High5 Semiconductor
+            </div>
+            <img src="logo.png" alt="Company Logo">
         </div>
-        <img src="logo.png" alt="Company Logo">
     </footer>
 </body>
 </html>
