--- a/index_cn.html
+++ b/index_cn.html
@@ -15,44 +15,49 @@
         header {
             background-color: white;
             color: #0F4499;
-            padding: 10px;
-            position: relative;
-            display: flex;
-            align-items: center;
+            padding: 15px;
+            text-align: center;
         }
         header h1 {
             margin: 0;
             padding: 0;
+            font-size: 1.5em;
         }
         header img {
-            position: absolute;
-            right: 20px;
-            top: 10px;
-            height: 80px;
+            height: 200px;
+            margin-top: 15px;
         }
         nav {
+            background-color: white;
+            padding: 10px;
+            overflow-x: auto;
+        }
+        .nav-links {
             display: flex;
             justify-content: center;
-            background-color: white;
-            align-items: center;
+            flex-wrap: wrap;
+            gap: 10px;
         }
         nav a {
             color: #0F4499;
-            padding: 14px 20px;
+            padding: 8px 15px;
             text-decoration: none;
             text-align: center;
             font-weight: bold;
+            white-space: nowrap;
         }
         nav a:hover, nav .active {
             background-color: #ddd;
             color: black;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
         .language-switch {
-            margin-left: 20px;
+            text-align: center;
+            margin-top: 10px;
+            padding: 5px;
         }
         main {
-            padding: 20px;
+            padding: 15px;
             max-width: 800px;
             margin: 0 auto;
         }
@@ -63,20 +68,33 @@
             margin-bottom: 20px;
         }
         footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px;
             background-color: white;
             color: #0F4499;
+            padding: 20px;
             margin-top: 20px;
-        }
-        footer img {
-            height: 100px;
+            text-align: center;
         }
         .footer-text {
             line-height: 1.8;
-            text-align: left;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* 移动端适配 */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.2em;
+            }
+            header img {
+                height: 100px;
+            }
+            nav {
+                padding: 5px;
+            }
+            nav a {
+                padding: 6px 12px;
+                font-size: 0.9em;
+            }
         }
     </style>
 </head>
@@ -86,12 +104,14 @@
         <img src="logo.png" alt="公司标志">
     </header>
     <nav>
-        <a href="index_cn.html" class="active">首页</a>
-        <a href="news_cn.html">新闻</a>
-        <a href="products_cn.html">产品</a>
-        <a href="design_service_cn.html">设计服务</a>
-        <a href="members_cn.html">成员</a>
-        <a href="contact_cn.html">联系我们</a>
+        <div class="nav-links">
+            <a href="index_cn.html" class="active">首页</a>
+            <a href="news_cn.html">新闻</a>
+            <a href="products_cn.html">产品</a>
+            <a href="design_service_cn.html">设计服务</a>
+            <a href="members_cn.html">成员</a>
+            <a href="contact_cn.html">联系我们</a>
+        </div>
         <div class="language-switch">
             <a href="index.html">Eng</a> | 
             <a href="index_cn.html">简体中文</a> | 
@@ -113,7 +133,6 @@
             地址: 香港新界沙田香港科学园5W大楼5楼309B室<br>
             ©2024 高武半导体保留所有权利
         </div>
-        <img src="logo.png" alt="公司标志">
     </footer>
 </body>
 </html>
