--- a/news_hk.html
+++ b/news_hk.html
@@ -138,7 +138,7 @@
         <section id="news">
             <div class="news-item">
                 <img src="Dr Chi with John Lee.jpg" alt="Dr Chi with John Lee">
-                <p>香港行政長官李家超在上海第七屆進博會上會見了高武半導體首席執行官羅博士</p>
+                <p>香港行政長官李家超在上海第七屆進博會上會見了高武半導體首席執行官羅志耀博士</p>
             </div>
             <div class="news-item">
                 <img src="Prof Yue got GuangHua Award.jpg" alt="Prof Yue got GuangHua Award">
